--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,13 +10,14 @@
 @import 'components/_carousel';
 @import 'components/_slider';
 
-@import 'layouts/404_section';
-@import 'layouts/_career_list_table_&_input';
+@import 'layouts/_404_section';
+@import 'layouts/_career_list_table_input';
 @import 'layouts/_footer';
 @import 'layouts/_forms';
 @import 'layouts/_grid';
 @import 'layouts/_header';
 @import 'layouts/_navigation';
+@import 'layouts/people_section';
 @import 'layouts/_sidebar';
 
 @import 'pages/_about'; 
@@ -35,4 +36,6 @@
 @import 'themes/_themes'; 
 
 @import 'vendors/_jquery-ui';
-@import 'vendors/_bootstrap';
+@import 'vendors/_bootstrap'; 
+
+
