--- a/scss/pages/_company.scss
+++ b/scss/pages/_company.scss
@@ -1,6 +1,3 @@
-.company-subnav-1 {
-    display: block;
-}
 
 .companysection2 {
     display: grid;
@@ -42,7 +39,8 @@
 
 .company-footer-img {
     width: 60rem;
-    margin-left: 10rem;
+    margin-left: 15rem;
+    margin-bottom:3rem;
 }
 
 .company-media {
@@ -50,30 +48,41 @@
 }
 
 .company-subnav-1 {
-    margin-top: 5rem;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    padding-top: 2rem;
+    z-index: 2;
+    background: white;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    
+
+    .career-thin-line {
+        border-right: thin solid $midGrey;
+        width: 6rem;
+    }
     .company-subnavimg {
         margin-left: 10rem;
     }
     .company-subnav-ul {
         display: flex;
         li {
+            color: $midGrey;
             margin-left: 1rem;
         }
+        .company-subnavbar-btn {
+            margin-top: -0.3rem;
+            margin-left: 2rem;
+            a {
+                color: skyblue;
+                text-decoration: none;
+            }
+            img {
+                margin-left: 1rem;
+            }
+        }
     }
-}
-
-.company-subnav-2 {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    margin-top: 5rem;
-    margin-left: 10rem;
-}
-
-.companysubnav2-num {
-    margin-left: 5rem;
-    margin-top: 5rem;
 }
 
 .company-media {
@@ -152,6 +161,9 @@
 }
 
 @media(max-width:580px) {
+    .company-subnav-1{
+        display:none;
+    }
     .companysection2 {
         margin-left: 1rem;
         .bear-footer {
