--- a/css/main.css
+++ b/css/main.css
@@ -355,9 +355,6 @@ ul {
     .career-details-mobile {
       display: block; } }
 
-.company-subnav-1 {
-  display: block; }
-
 .companysection2 {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -391,31 +388,39 @@ ul {
 
 .company-footer-img {
   width: 60rem;
-  margin-left: 10rem; }
+  margin-left: 15rem;
+  margin-bottom: 3rem; }
 
 .company-media {
   display: none; }
 
 .company-subnav-1 {
-  margin-top: 5rem;
   display: grid;
-  grid-template-columns: repeat(2, 1fr); }
+  grid-template-columns: repeat(2, 1fr);
+  padding-top: 2rem;
+  z-index: 2;
+  background: white;
+  position: fixed;
+  top: 0;
+  width: 100%; }
+  .company-subnav-1 .career-thin-line {
+    border-right: thin solid #878787;
+    width: 6rem; }
   .company-subnav-1 .company-subnavimg {
     margin-left: 10rem; }
   .company-subnav-1 .company-subnav-ul {
     display: flex; }
     .company-subnav-1 .company-subnav-ul li {
+      color: #878787;
       margin-left: 1rem; }
-
-.company-subnav-2 {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  margin-top: 5rem;
-  margin-left: 10rem; }
-
-.companysubnav2-num {
-  margin-left: 5rem;
-  margin-top: 5rem; }
+    .company-subnav-1 .company-subnav-ul .company-subnavbar-btn {
+      margin-top: -0.3rem;
+      margin-left: 2rem; }
+      .company-subnav-1 .company-subnav-ul .company-subnavbar-btn a {
+        color: skyblue;
+        text-decoration: none; }
+      .company-subnav-1 .company-subnav-ul .company-subnavbar-btn img {
+        margin-left: 1rem; }
 
 .company-media {
   display: none;
@@ -473,6 +478,8 @@ ul {
     display: block; } }
 
 @media (max-width: 580px) {
+  .company-subnav-1 {
+    display: none; }
   .companysection2 {
     margin-left: 1rem; }
     .companysection2 .bear-footer {
