--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -5,17 +5,29 @@
 }
 
 body {
-    font-family: 'proxima_nova_altbold', sans-serif;
+    font-family: 'proxima_nova', sans-serif;
     font-style: normal;
-    font-weight: 100;
+    font-weight: 400;
     line-height: 1.6;
 }
 
-h1,
-h2,
-h3,
-h4 {
+h1{
     line-height: 1.3;
+    font-weight: 700;
+}
+
+h2{
+    line-height: 1.3;
+    font-weight: 500;
+}
+
+h2{
+    line-height: 1.3;
+    font-weight: 500;
+}
+
+p{
+    font-weight:400;
 }
 
 ul {
