--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,99 @@ ul {
   .media-footer {
     display: block; } }
 
+*,
+*:before,
+*:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+body {
+  overflow-x: hidden;
+  overflow-y: scroll; }
+
+.main1 .blue_cloud {
+  z-index: -1;
+  height: 55%;
+  overflow-x: hidden;
+  position: relative;
+  top: 50px;
+  margin-bottom: 35px; }
+  @media (max-width: 599px) {
+    .main1 .blue_cloud {
+      display: none; } }
+
+.main1 .w404_img {
+  display: flex;
+  justify-content: space-around;
+  position: absolute;
+  top: 0; }
+  .main1 .w404_img .w404_img__txt {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%; }
+    .main1 .w404_img .w404_img__txt .w404__img--txtt {
+      font-size: 46px;
+      font-weight: 900;
+      width: 90%;
+      line-height: 1.2;
+      word-spacing: 5px;
+      color: rgba(0, 0, 0, 0.8);
+      margin-top: 6rem;
+      margin-bottom: 20px;
+      margin-left: 89px; }
+    .main1 .w404_img .w404_img__txt .w404__img--txttt {
+      width: 75%;
+      font-size: 26px;
+      font-weight: 200;
+      color: lightgrey;
+      line-height: 1.3; }
+      .main1 .w404_img .w404_img__txt .w404__img--txttt a {
+        text-decoration: none;
+        color: aqua; }
+  .main1 .w404_img .img--space_rabbit {
+    margin-top: 9.5%;
+    margin-right: 1%;
+    width: 40%;
+    height: 40%; }
+  @media (max-width: 599px) {
+    .main1 .w404_img {
+      display: none; } }
+
+.w404_mob {
+  display: none; }
+  .w404_mob a {
+    color: aqua;
+    text-decoration: none; }
+  @media (max-width: 599px) {
+    .w404_mob {
+      display: flex;
+      flex-direction: column;
+      width: 90%;
+      margin: 0 auto; } }
+  @media (max-width: 599px) {
+    .w404_mob .w404_mob--txt {
+      text-align: center;
+      margin: 15px; } }
+  @media (max-width: 599px) {
+    .w404_mob .w404_mob--txt a {
+      color: aqua; } }
+  @media (max-width: 599px) {
+    .w404_mob .w404_mob--txtt {
+      width: 98%;
+      margin: 0 auto;
+      text-align: center;
+      margin: 15px 0 15px 0;
+      line-height: 1.2;
+      color: lightgrey; } }
+  @media (max-width: 599px) {
+    .w404_mob .space_rabbit--mob {
+      width: 60%;
+      margin: 0 auto;
+      margin-top: 15px; } }
+
 .navbar {
   display: flex;
   font-size: 1.2rem;
@@ -346,7 +439,7 @@ ul {
   margin-top: 5rem;
   margin-left: 5rem; }
   .companysection-footer .carrot {
-    margin-right: 15rem;
+    margin-right: 9rem;
     margin-top: -4rem; }
 
 .company-footer-img {
