--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,7 @@
 @import 'components/_slider';
 
 @import 'layouts/_footer';
+@import 'layouts/_404_pages';
 @import 'layouts/_forms';
 @import 'layouts/_grid';
 @import 'layouts/_header';
