--- a/scss/pages/_people.scss
+++ b/scss/pages/_people.scss
@@ -1,4 +1,3 @@
-
 .peoples-media{
     display:none;
 }
@@ -94,3 +93,315 @@ margin-left:-0.5rem;
     margin-left:18.8rem;
     margin-top:-5rem;
 }
+
+  *,
+  *:before,
+  *:after {
+      margin: 0;
+      padding: 0;
+  }
+  
+  .people-2{
+      overflow-y: hidden;
+  
+     
+  
+      .people_2a {
+          display: flex;
+          justify-content: space-around;
+  
+          @include for-phone-only(){
+            display: none;
+          }
+  
+          .top__nav--txt{
+              margin-right: 10%;
+              margin-bottom: 15px;
+              font-size: 46px;
+              font-weight: 900;
+  
+              @include for-phone-only(){
+                display: none;
+              }
+          }
+          .top__nav{
+              flex-basis: 50%;
+              word-spacing: 2px;
+              line-height: 1.6;
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center;
+  
+              .top__nav--txtt{
+                  width: 68%;
+                  line-height: 1.2;
+                  font-size: 20px;
+                  font-weight: 300;
+                  margin-right: 40px;
+                  color: rgba(0,0,0 , 0.5);
+  
+                  @include for-phone-only(){
+                    display: none;
+                  }
+              }
+          }
+      }
+  
+      .sec__top__nav{
+  
+        @include for-phone-only(){
+          display: none;
+        }
+        border-radius: 10px;
+        border: 1px solid grey;
+        background: $white;
+        margin-top: 30px;
+        width:40%;
+        margin-right: 100px;
+        box-shadow: 0 10px 10px rgba(0,0,0 , 0.7);
+        display: flex;
+        
+        flex-direction: column;
+        justify-content: center;
+      
+        .activities{
+          display: flex;
+          flex-direction: column;
+          margin-left: 10px;
+          .activities__txt{
+            margin: 13px;
+            font-size: 26px;
+          }
+          .icons{
+            display: flex;
+            border-bottom: 1px solid $darkGrey;
+            margin-bottom: 30px;
+            font-size: 16px;
+            i {
+              padding: 5px;
+              margin: 3px;
+            }
+            h5{
+              padding: 5px;
+              margin: 3px;
+              
+            }
+          }
+          hr{height: 30px}
+         
+        }
+      }
+      
+      .users__activities{
+        margin-left: 17px;
+        
+        .user{
+          display: flex;
+          margin-bottom: 15px;
+          img{
+            width: 10%;
+          }
+          
+          .user--time{
+            color: rgba(0,0,0, 0.5);
+          }
+          .user__message {
+            padding-left: 10px;
+            font-size: 16px;
+            
+            .user--txt{
+              color:  rgba(0,0,0, 0.5);
+            }
+          }
+        }
+      }
+      
+      .sec__nav {
+         
+        @include for-phone-only(){
+          display: none;
+        }
+        display: flex;
+        justify-content: center;
+        margin-top: 10%;
+
+        .sec__nav--img {
+            width: 35%;
+            height: 35%;
+            
+         }
+         .sec__nav--txt {
+           display: flex;
+           flex-direction: column;
+           flex-basis: 50%;
+           justify-content: center;
+          align-items: center;
+      
+          .txt { 
+            margin: 0 0 2% -9%; 
+             font-weight: 700; 
+             font-size: 36px;
+
+            }
+      
+          .txtt {
+            width: 68%;
+            line-height: 1.3;
+            margin-left: 3.5%;
+            font-size: 26px;
+            color:  rgba(0,0,0 , 0.5);
+          }
+         }
+         .btn {
+           height: 36px;
+            width: 15rem;
+            outline: none;
+            margin-left: -32%;
+            background: $skyBlue;
+            color: white;
+            word-spacing: 3px;
+            border-radius: 5px 0 0 5px;
+            border: none;
+            cursor: pointer;
+      
+            
+          }
+      
+        
+      }
+  
+      .people-mob{
+        display: none;
+        background: hsl(216,45,97);
+  
+  
+        @include for-phone-only(){
+          display: block;
+          max-width: 100%;
+          margin: 0 auto;
+          padding: 0 5%;
+  
+        }
+        .activities--mob {
+          @include for-phone-only(){
+            font-size: 26px;
+            font-weight: 700;
+            padding: 15px 0;
+            z-index: 3;
+            
+          }
+        }
+        .activities__txt--mob{
+          @include for-phone-only(){
+            font-size: 16px;
+            font-weight: 300;
+            line-height: 1.2;
+            width: 90%;
+            margin-bottom: 20px;
+            color: rgba(0,0,0 , 0.5);
+          }
+        }
+        .sec__top__nav--mob{
+            @include for-phone-only(){
+              border: 1px solid grey;
+              box-shadow: 0 10px 10px rgba(0,0,0 , 0.7);
+                z-index: 4;
+                background: #fff;
+              
+            }
+          .activities{
+            @include for-phone-only(){
+              display: flex;
+              flex-direction: column;
+              margin: 5px 0;
+              padding: 5px;
+              
+            }
+            .activities__txt{
+              font-size: 20px;
+            }
+  
+            .icons{
+              display: flex;
+              border-bottom: 1px solid grey;
+              margin-bottom: 0 15px 30px 0;
+              font-size: 16px;
+              i {
+                padding: 5px;
+                margin: 3px;
+              }
+              h5{
+                padding: 5px;
+                margin: 3px;
+                
+              }
+            }
+            hr{height: 30px}
+           
+          }
+          .users__activities--mob{
+           
+            .user--mob{
+              display: flex;
+              margin-bottom: 15px;
+              
+              img{
+                width: 20%;
+                padding:0  10px;
+              }
+              
+              .user--time{
+                color: rgba(0,0,0, 0.5);
+              }
+              .user__message {
+                padding-left: 20px;
+                font-size: 16px;
+                align-self: flex-end;
+                
+                .user--txt{
+                  color:  rgba(0,0,0, 0.5);
+                }
+              }
+            }
+          }
+        }
+  
+        .activities__txt1{
+  
+          @include for-phone-only(){
+            margin: 50px 0;
+          }
+  
+          .activities__txt1t{
+            @include for-phone-only(){
+              font-weight: 700;
+              font-size: 26px;
+              margin: 15px 0;
+            }
+          }
+          .activities__txt1tt{
+            @include for-phone-only(){
+              font-size: 16px;
+              font-weight: 300;
+              line-height: 1.2;
+              width: 90%;
+              margin-bottom: 20px;
+              color: rgba(0,0,0 , 0.5);
+            }
+          }
+          a{ 
+            color: aqua;
+            font-size: 20px;
+          }
+          .chilling--rabbits{
+            @include for-phone-only(){
+              margin: 30px 0;
+              overflow-x: hidden;
+            }
+          }
+        }
+  }
+  }
+  
+  
