--- a/scss/layouts/_career_list_table_input.scss
+++ b/scss/layouts/_career_list_table_input.scss
@@ -8,6 +8,7 @@
 body{
     overflow-x: hidden;
     overflow-y: scroll;
+    font-family: 'Proxima-nova', sans-serif;
 }
 .header1{
     background: url("https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568411743/samples/figma%20career-list/ukse4rdhtfbu0ykv8rcv.png") no-repeat;
