--- a/scss/pages/_people.scss
+++ b/scss/pages/_people.scss
@@ -1,8 +1,15 @@
+.people{
+  .navbar{
+    margin: 0;
+    background-color: white;
+    a{
+      color: black;
+    }
+  }
+}
 .peoples-media{
     display:none;
 }
-
-
 
 .grid{
     display:grid;
