--- a/scss/layouts/_career_list_table_input.scss
+++ b/scss/layouts/_career_list_table_input.scss
@@ -58,7 +58,7 @@ body{
     }
 
     .header-b{
-        background: none;
+        // background: yellow;
         position: sticky;
         top: 0;
         
