--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,27 +1,26 @@
 .navbar {
     display: flex;
     font-size: 1.2rem;
-    margin-top: 3rem;
     margin-left: 5rem;
     overflow: hidden;
-    background-color: $coral;
+    background-color: transparent;
     .header-b-back {
         display: flex;
         margin-left: 1rem;
-        margin-top: 1rem;
+        margin-top: 5%;
         .header-back-img{
             border:thin solid white;
             padding:0.3rem;
         }
     }
     .headerimg {
-        margin-top: 1rem;
+        margin-top: 5%;
     }
     .navbar-ul {
         display: flex;
         margin-left: 28rem;
         width: 60vw;
-        margin-top: 1rem;
+        margin-top: 5%;
         a {
             margin-right: 1.5rem;
             text-decoration: none;
