Hopper.come rebased from develop

--- a/components/footer.html
+++ b/components/footer.html
@@ -2,6 +2,7 @@
     <div class="restriction">
         <div class="main-footer">
             <div class="footer-1">
+                
                 <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412229/samples/figma%20homepage/s2c7y0uy86hmk4bsr6zv.png">
                 <div> <img class="footer-image" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/m87et8yszesshavwinf0.png"><span style="margin-right:0.5rem">ENGLISH</span><img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568639192/samples/figma%20homepage/jp5v0zr7mtuisfme6icx.png"></div>
 
@@ -83,20 +84,21 @@
         <li class="media-line">Support<img class="media-push3" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png"></li>
         <li>Insights<img class="media-push4" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png"></li>
     </ul>
-    <div class="media-lang">
-        <p>Language<span><img class="media-push5" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568639192/samples/figma%20homepage/jp5v0zr7mtuisfme6icx.png"></p></span></div>
-    <div style="margin-bottom:2rem;">
+        <select class="footer__input" placeholder="Select an option" name="fname">
+            <option value="Language">Language</option>
+            
+        </select>
 
-        <a href="https://facebook.com"><i class="fab fa-facebook"></i></a>
-        <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
-        <a href="https://instagram.com"><i class="fab fa-instagram"></i></a>
-        <a href="https://linkedin.com"><i class="fab fa-linkedin"></i></a>
-        <a href="https://youtube.com"><i class="fab fa-youtube"></i></a>
-        <a href="https://medium.com"><i class="fab fa-medium"></i></a>
+    <div class="icon">
 
+        <a href="https://facebook.com"><i class="fa fa-facebook icon2"></i></a>
+        <a href="https://twitter.com"><i class="fa fa-twitter icon2"></i></a>
+        <a href="https://instagram.com"><i class="fa fa-instagram icon2"></i></a>
+       </div>
+    <div class="media-terms">
+        <a style="color:grey;text-decoration:none;"  href="#"><u>Terms of Service</u></a>
     </div>
-    <a style="color:grey;text-decoration:none;" class="media-terms" href="#">Terms of Service</a>
+    
 
     <p class="media-copy">&copy 2018 Hopper Inc.</p>
-    <link rel="stylesheet" href="../css/main.css">
 </div>
