--- a/components/header.html
+++ b/components/header.html
@@ -1,23 +1,22 @@
 <div class="restriction">
-        <nav class="navbar">
-                <a href="./../pages/homepage.html"><img class="headerimg" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569535988/samples/zainabs/ydmeiil3nijuzm2ljmlg.png">
-                </a>
-                <ul class="navbar-ul">
-                    <li><a href="./../pages/company.html">COMPANY</a></li>
-                    <li class="people-nav"><a href="people.html">PEOPLE</a></li>
-                    <li><a href="#support">SUPPORT<img  class="support-nav" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/qkyithncohhx6pvmgotw.png"></a></li>
-                    <li class="send-nav"><a href="#">Send app to your phone</a></li>
-                </ul>
-        </nav>
+    <nav class="navbar">
+            <a href="./../pages/homepage.html"><img class="headerimg" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569423612/samples/new%20folder/khcighwt6rzex3ttaqrv.svg">
+            </a>
+            <ul class="navbar-ul">
+                <li><a href="./../pages/company.html">COMPANY</a></li>
+                <li class="people-nav"><a href="people.html">PEOPLE</a></li>
+                <li><a href="#support">SUPPORT<img  class="support-nav" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/qkyithncohhx6pvmgotw.png"></a></li>
+                <li class="send-nav"><a href="#">Send app to your phone</a></li>
+            </ul>
+    </nav>
 
-    </div>
+</div>
 
-    <div class="media-header">
-        <img class="media-header1" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569536578/samples/zainabs/dq3toaxpwzungutsluvl.png">
+<div class="media-header">
+    <img class="media-header1" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152594/samples/new%20folder/zzf0xbkcjr4a4gjjfgyt.png>
+    <img class="media-header2" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569423612/samples/new%20folder/khcighwt6rzex3ttaqrv.svg">
 
-        <img class="media-header2" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569536578/samples/zainabs/hfdjqnl0vurccvfs8aaz.png">
+    <img class="media-header3" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569412035/samples/figma%20homepage/fni2jdszgdrmgqsugu22.png">
 
-        <img class="media-header3" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569536579/samples/zainabs/ajnauplzmcr4qujdw6ls.png">
-
-    </div>
-    <link rel="stylesheet" href="../css/main.css">
+</div>
+<link rel="stylesheet" href="../css/main.css">
