--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,10 +24,10 @@
 @import 'pages/_home'; 
 @import 'pages/_homepage'; 
 @import 'pages/_people'; 
-
 @import 'pages/_company-section-2';
 @import 'pages/people-2.scss';
 @import 'pages/_job';
+@import 'pages/_termsofservice';
 
 @import 'themes/_admin'; 
 @import 'themes/_themes'; 
