--- a/components/header.html
+++ b/components/header.html
@@ -4,7 +4,7 @@
             </a>
             <ul class="navbar-ul">
                 <li><a href="./../pages/company.html">COMPANY</a></li>
-                <li class="people-nav"><a href="people.html">PEOPLE</a></li>
+                <li class="people-nav"><a href="./../pages/people.html">PEOPLE</a></li>
                 <li><a href="#support">SUPPORT<img  class="support-nav" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/qkyithncohhx6pvmgotw.png"></a></li>
                 <li class="send-nav"><a href="#">Send app to your phone</a></li>
             </ul>
